--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,16 @@
-/* styles go here */
+fieldset {
+  margin-bottom: 20px;
+}
+
+.form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.last {
+  margin-bottom: 0;
+}
+
+button {
+  margin-top: 20px;
+}
